<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where2Eat</string>

    <!-- Menu -->

    <string name="action_search">Search</string>
    
    <string name="example_server">Example Server</string>
    <string name="local_server">Local Server</string>
    <string name="amazon_server">Amazon Server</string>
    <string name="oleo_server">Oleo Server</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Ingresa un restaurant</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_restaurant_detalle">RestaurantDetalleActivity</string>
    
    <!-- RestaurantDetalleActivity -->
    <string name="restaurant_address">Dirección:</string>
    <string name="restaurant_phone">Phone:</string>
    <string name="restaurant_phone_call">Llamada telefonica</string>
    
    <string name="search">Sync</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    

</resources>
