<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:where2eat="http://schemas.android.com/apk/res-auto" >
     

      <!-- Search, should appear as action button 
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/action_search"
          where2eat:showAsAction="ifRoom" />-->
          
     <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_menu_search"
          where2eat:showAsAction="ifRoom|collapseActionView"
          where2eat:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item
        android:id="@+id/action_example_server"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/example_server"/>
    
    <item android:id="@+id/action_local_server"
         android:orderInCategory="101"
         android:showAsAction="never"
         android:title="@string/local_server"/>
    
    <item android:id="@+id/action_amazon_server"
         android:orderInCategory="102"
         android:showAsAction="never"
         android:title="@string/amazon_server"/>
    
    <item android:id="@+id/action_oleo_server"
         android:orderInCategory="102"
         android:showAsAction="never"
         android:title="@string/oleo_server"/>
    
    
</menu>
